CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(AngleViewer VERSION 0.1.0)

FILE(GLOB SRC
	*.cpp
	*.h
	) 

ADD_EXECUTABLE(${PROJECT_NAME} WIN32
    ${SRC})

TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PUBLIC
	UNICODE=1
	_UNICODE=1
	)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC
    plog/include
	${CMAKE_INSTALL_PREFIX}/include
	)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	debug 
	${CMAKE_INSTALL_PREFIX}/debug/lib/libegl.lib
	${CMAKE_INSTALL_PREFIX}/debug/lib/libGLESv2.lib
	optimized 
	${CMAKE_INSTALL_PREFIX}/lib/libegl.lib
	${CMAKE_INSTALL_PREFIX}/lib/libGLESv2.lib
	)

