SET(SUB_NAME scene)

FILE(GLOB SRC
	*.cpp
	*.h
	) 

ADD_LIBRARY(${SUB_NAME} 
    ${SRC})

TARGET_COMPILE_DEFINITIONS(${SUB_NAME} PUBLIC
	UNICODE=1
	_UNICODE=1
	)

TARGET_INCLUDE_DIRECTORIES(${SUB_NAME} PUBLIC
    ${CMAKE_CURRENT_LIST_DIR}/../glm
    ${CMAKE_CURRENT_LIST_DIR}/../plog/include
    ${CMAKE_CURRENT_LIST_DIR}/../imgui
	${CMAKE_CURRENT_LIST_DIR}/../json/include
	${CMAKE_CURRENT_LIST_DIR}/../simplegltf
	)
